netmaker/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netmaker-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netmaker-ui
  template:
    metadata:
      labels:
        app: netmaker-ui
    spec:
      containers:
      - name: netmaker-ui
        image: gravitl/netmaker-ui:v1.6.0
      terminationGracePeriodSeconds: 15
