netmaker/ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'netmaker-ui'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: 'netmaker-ui'
  sessionAffinity: None
  type: 'ClusterIP'
